# Rush

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: RushConfig.cmake.in
src/rush/: algorithm.h  concepts.h  rush.h
src/rush/allocator/: allocator.h  heap_allocator.h  permanent_heap_pool.h  permanent_pool.h  pool.h  stack_allocator.h
src/rush/bound/: aabb_base.h  aabb_impl.h  bound.h  intersections.h  sphere_base.h
src/rush/curve/: bezier_base.h  bezier_impl.h  curves.h  rectified_base.h  rectified_impl.h
src/rush/geometry/: aabb_base.h  aabb_impl.h  dynamic_tree_base.h  dynamic_tree_impl.h  edge_base.h  edge_impl.h  geometry.h  intersections.h  plane_base.h  plane_impl.h  ray_base.h  ray_impl.h  raycast.h  sphere_base.h  sphere_impl.h  static_tree_base.h  static_tree_impl.h  tree_base.h  tree_impl.h  triangle_base.h  triangle_impl.h
src/rush/matrix/: mat.h  mat_base.h  mat_dense_rep.h  mat_extra.h  mat_impl.h  mat_sparse_rep.h  matrix_lu_decompose.h
src/rush/quaternion/: quat.h  quat_base.h  quat_extra.h  quat_impl.h
src/rush/scalar/: scalar_math.h
src/rush/vector/: vec.h  vec_base.h  vec_extra.h  vec_impl.h  vec_math.h  vec_ref.h
tests/: CMakeLists.txt  aabb.cpp  bezier.cpp  matrix.cpp  matrix_benchmark.cpp  plane.cpp  pool.cpp  quat.cpp  scalar_math.cpp  test_common.h  tree.cpp  tree_benchmark.cpp  vector.cpp  vector_benchmark.cpp
